--- a/index.html
+++ b/index.html
@@ -7,9 +7,14 @@
     <title>Desgine By - Himanshu Kumar</title>
     <!-- style -->
     <link rel="stylesheet" href="style.css">
-
     <!-- aos -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <!-- icon -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+        integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- responsive -->
+    <link rel="stylesheet" href="responsive.css">
 </head>
 
 <body>
@@ -42,7 +47,7 @@
                 </ul>
             </div>
             <div class="nav-btns">
-                <a href="#">
+                <a href="#" id="nav-login">
                     Log in
                 </a>
 
@@ -80,6 +85,50 @@
             </div>
         </div>
         <!-- front end -->
+
+
+        <!-- login page -->
+        <div class="login-page">
+            <!-- login container -->
+            <div class="login_container">
+
+                <!-- cut bar -->
+                <i class="fa-solid fa-xmark cut-bar"></i>
+
+                <!-- content box -->
+                <div class="content">
+                    <h1>Login</h1>
+                    <!-- input -->
+                    <div class="inputs">
+                        <!-- email -->
+                        <div class="input-container">
+                            <input placeholder="email" type="text" class="input">
+                            <span>@gmail.com</span>
+                        </div>
+                        <!-- password -->
+                        <div class="input-container">
+                            <input placeholder="Password" type="password" class="input">
+                            <span>Password</span>
+                        </div>
+                        <!-- forgot account link -->
+                        <div class="forgot">
+                            <a href="Forgot account">
+                                <span>Forgot Password?</span>
+                            </a>
+                        </div>
+                    </div>
+
+                    <!-- button -->
+                    <div class="btn">
+                        <button>Login</button>
+                        <span>
+                            Don't have an account?
+                            <a href="Register">Register</a>
+                        </span>
+                    </div>
+                </div>
+            </div>
+        </div>
     </header>
     <!-- header end -->
 
